<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_default_app_bg">

    <TextView
        android:layout_marginTop="@dimen/px_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/text_h1_size"
        android:textStyle="bold"
        android:text="@string/device_info"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_marginTop="@dimen/px_100"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_more_than_middle"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="MODEL:"/>
            <TextView
                android:id="@+id/tv_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_more_than_middle"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_more_than_middle"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="IMEI:"/>
            <TextView
                android:id="@+id/tv_imei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_more_than_middle"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_more_than_middle"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="ICCID:"/>
            <TextView
                android:id="@+id/tv_iccid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_more_than_middle"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textStyle="bold"
                android:textSize="@dimen/text_more_than_middle"
                android:textColor="@color/white"
                android:text="VER.:"/>
            <TextView
                android:id="@+id/tv_ver_of_Android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_more_than_middle"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>





    <LinearLayout
        android:visibility="gone"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/px_96"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="@dimen/px_450"
            android:layout_height="@dimen/px_120"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_middle"
            android:background="@drawable/ic_btn_normal"
            android:text="@string/local_update"/>
        <Button
            android:layout_width="@dimen/px_450"
            android:layout_height="@dimen/px_120"
            android:layout_marginLeft="@dimen/px_56"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_middle"
            android:background="@drawable/ic_btn_normal"
            android:text="@string/online_update"/>
    </LinearLayout>

</LinearLayout>