<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_default_app_bg">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="247dp"
                android:layout_height="157dp"
                android:src="@drawable/ic_vrd_logo"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_zhilianchewang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="46sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="智联车网"/>
                <TextView
                    android:id="@+id/tv_service"
                    android:layout_below="@id/tv_zhilianchewang"
                    android:layout_marginTop="@dimen/px_26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/content_text_small_size"
                    android:text="服务商："/>
                <TextView
                    android:id="@+id/tv_service_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/content_text_small_size"
                    android:layout_above="@+id/tv_customer_service"
                    android:layout_toRightOf="@+id/tv_service"
                    android:layout_toEndOf="@+id/tv_service" />
                <TextView
                    android:id="@+id/tv_customer_service"
                    android:layout_below="@id/tv_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/content_text_small_size"
                    android:text="客服热线："/>
                <TextView
                    android:id="@+id/tv_customer_service_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/content_text_small_size"
                    android:layout_alignTop="@+id/tv_customer_service"
                    android:layout_toRightOf="@+id/tv_customer_service"
                    android:layout_toEndOf="@+id/tv_customer_service" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_2"
        android:background="@color/viewfinder_mask"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#2f000000">
        <LinearLayout
            android:id="@+id/ll_car_team"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_26"
                android:src="@drawable/ic_car_team"/>
            <TextView
                android:layout_marginTop="@dimen/px_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/content_text_size"
                android:text="@string/car_team"/>
        </LinearLayout>
        <View
            android:layout_width="@dimen/px_2"
            android:layout_height="match_parent"
            android:background="@color/viewfinder_mask"/>
        <LinearLayout
            android:id="@+id/ll_car_master"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_26"
                android:src="@drawable/ic_car_master"/>
            <TextView
                android:layout_marginTop="@dimen/px_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/content_text_size"
                android:text="@string/car_master"/>
        </LinearLayout>

        <View
            android:layout_width="@dimen/px_2"
            android:layout_height="match_parent"
            android:background="@color/viewfinder_mask"/>
        <LinearLayout
            android:id="@+id/ll_device"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_26"
                android:src="@drawable/ic_device_info"/>
            <TextView
                android:layout_marginTop="@dimen/px_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/content_text_size"
                android:text="@string/device_info"/>
        </LinearLayout>
        <View
            android:layout_width="@dimen/px_2"
            android:layout_height="match_parent"
            android:background="@color/viewfinder_mask"/>
        <LinearLayout
            android:id="@+id/ll_about"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/px_26"
                android:src="@drawable/ic_about"/>
            <TextView
                android:layout_marginTop="@dimen/px_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/content_text_size"
                android:textStyle="bold"
                android:text="@string/about_vrd"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
